[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Pause_Menu.gd" type="Script" id=1]

[node name="Pause_Menu" type="CanvasLayer"]
pause_mode = 2
layer = 99
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="SideMenu" type="VBoxContainer" parent="."]
anchor_left = 0.344
anchor_top = 0.306
anchor_right = 0.5
anchor_bottom = 0.583
margin_left = -0.320007
margin_top = -0.320023
margin_bottom = 0.23999

[node name="ReturnButton" type="ToolButton" parent="SideMenu"]
margin_right = 200.0
margin_bottom = 22.0
text = "RETURN"

[node name="MenuButton" type="ToolButton" parent="SideMenu"]
visible = false
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
text = "Menu"
